<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:id="@+id/textViewNom"
        android:text="@string/nom"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textViewNom"
        android:id="@+id/editTextNom"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewNom"
        android:id="@+id/textViewEmail"
        android:text="@string/email"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNom"
        android:layout_toEndOf="@id/textViewEmail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/afegir"
        android:text="@string/afegir"
        android:layout_below="@id/editTextEmail"
        android:layout_centerInParent="true"
        android:onClick="afegirUsuari"
        />

</RelativeLayout>